# roadviz

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  README.md  package.json  tep16_partial_changes.patch
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: dependencies.py
apps/api/app/api/routes/: enrichment.py  projects.py  schema_templates.py  upload_mapping.py  uploads.py
apps/api/app/db/: __init__.py  connection.py  schema.py  serialization.py
apps/api/app/enrichment/: __init__.py  db_repository.py  repository.py  schemas.py  service.py
apps/api/app/gpr_imports/: __init__.py  schemas.py  service.py
apps/api/app/mapping_definitions/: __init__.py  schemas.py  service.py
apps/api/app/normalization/: __init__.py  db_repository.py  repository.py  schemas.py  service.py
apps/api/app/parsing/: __init__.py  schemas.py  service.py
apps/api/app/projects/: db_repository.py  repository.py  schemas.py
apps/api/app/schema_templates/: __init__.py  db_repository.py  repository.py  schemas.py
apps/api/app/upload_mappings/: __init__.py  db_repository.py  repository.py  schemas.py  service.py
apps/api/app/uploads/: __init__.py  db_repository.py  repository.py  schemas.py  storage.py
apps/api/tests/: test_enrichment.py  test_persistence.py  test_projects.py  test_smoke.py  test_uploads.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/projects/: page.tsx  (+1 more)
apps/web/lib/: projects.ts  uploads.ts
docs/: README.md
infra/compose/: docker-compose.yml
(+9 files in other folders)
