[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "roadviz-api"
version = "0.1.0"
description = "RoadViz FastAPI service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "openpyxl>=3.1,<4.0",
  "python-multipart>=0.0.9,<1.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
